#1 Define Parameters (GREEN)
