# src/FrameUp.OrderService.Api/Models/ProcessVideoBodyRequest.cs
@@ -1,8 +1,12 @@
+using FrameUp.OrderService.Domain.Enums;
+
 namespace FrameUp.OrderService.Api.Models;
 
 public class ProcessVideoBodyRequest
 {
-    public int Resolution { get; set; }
+    public int CaptureInterval { get; set; }
+
+    public ResolutionTypes ExportResolution { get; set; }
 
     public IEnumerable<IFormFile> Videos { get; set; } = [];
 }
